# libvata

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile.in  Makefile  README  README.md
api/: Doxyfile  Makefile
automata/: add_trans_timbuk.txt  bu_unreachable_removal_timbuk.txt  down_sim_timbuk.txt  emptiness_timbuk.txt  inclusion_timbuk.txt  intersection_timbuk.txt  invert_timbuk.txt  load_timbuk.txt  small_timbuk.txt  td_unreachable_removal_timbuk.txt  union_timbuk.txt  unreachable_removal_timbuk.txt  useless_removal_timbuk.txt
automata/artmc_timbuk/: A0053  A0054  A0055  A0056  A0057  A0058  A0059  A0062  A0064  A0065  A0070  A0080  A0082  A0083  A0087  A0111  A0117  A0126  A0172  A0177  A0310  A1003  A2003  A301  A321  A322  A328  A329  A335  A354  A387  A447  A483  A487  A489  A491  A496  A501  A532  A569  (+13 more)
automata/fail_timbuk/: 4  5
automata/moderate_artmc_timbuk/: A0063  A0086  A0120  A0130
automata/small_timbuk/: A11  A12  A30  A7  add_trans_1_aut  add_trans_1_result  add_trans_2_aut  add_trans_2_result  add_trans_2_trans  bu_unreachable_1  bu_unreachable_1_result  bu_unreachable_2  bu_unreachable_2_result  bu_unreachable_3  complement_2  down_sim_1_result  down_sim_2  down_sim_2_result  down_sim_3  down_sim_3_result  down_sim_4  down_sim_4_result  down_sim_5  down_sim_6_result  down_sim_7  down_sim_7_result  down_sim_8  down_sim_8_result  down_sim_9  down_sim_9_result  emptiness_1  emptiness_2  emptiness_3  incl_empty_children  incl_forester_1_bigger  incl_forester_1_smaller  inclusion_2_smaller  inclusion_4_bigger  inclusion_4_smaller  inclusion_5_bigger  (+27 more)
automata/yun_yun_mata/: included2
cli/: CMakeLists.txt  operations.hh  parse_args.cc  parse_args.hh  vata.cc  version.cc.in
cmake/Modules/: FindLog4CPP.cmake  FindLoki.cmake
examples/: .gitignore  200.timbuk  Makefile  example02.cc  example04.cc  example07.cc  example08.cc  example1.cc  example10.cc  example11.cc  example14.cc  example15.cc  example16-symbolic_incl.cc  example2.cc  example3.cc  example4.cc  example5.cc  example6.cc  example8.cc  example9.cc
include/vata/: abstr_aut.hh  aut_base.hh  aut_op.hh  bdd_bu_tree_aut.hh  bdd_bu_tree_aut_incl.hh  bdd_bu_tree_aut_op.hh  bdd_td_tree_aut.hh  bdd_td_tree_aut_incl.hh  bdd_td_tree_aut_op.hh  bdd_tree_aut.hh  bdd_tree_aut_op.hh  convert.hh  down_tree_incl_fctor.hh  down_tree_incl_nouseless_fctor.hh  down_tree_opt_incl_fctor.hh  explicit_finite_aut.hh  explicit_lts.hh  explicit_lts_sim.hh  explicit_tree_aut.hh  explicit_tree_aut_op.hh  explicit_tree_candidate.hh  explicit_tree_comp_down.hh  explicit_tree_incl.hh  explicit_tree_incl_down.hh  explicit_tree_incl_up.hh  explicit_tree_isect.hh  explicit_tree_transl.hh  explicit_tree_unreach.hh  explicit_tree_useless.hh  incl_ctx.hh  incl_param.hh  notimpl_except.hh  ondriks_mtbdd.hh  reduce_param.hh  sim_param.hh  sym_var_asgn.hh  symbolic.hh  symbolic_aut_base.hh  tree_incl_down.hh  tree_incl_down_nouseless.hh  (+5 more)
python_interface/: cli_operation_representation.py  cli_options_enums.py  command_serializer.py  operation_options.py  result_printer.py  test1.py  tester.py  vata_executor.py  vata_interface.py  vata_result.py
src/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  antichain2c.hh.bak  antichain2c_v2.hh  aut_base.cc  bdd_bu_tree_aut.cc  bdd_bu_tree_aut_core.cc  bdd_bu_tree_aut_core.hh  bdd_bu_tree_aut_downsim.cc  bdd_bu_tree_aut_incl.cc  bdd_bu_tree_aut_isect.cc  bdd_bu_tree_aut_sim.cc  bdd_bu_tree_aut_union.cc  bdd_bu_tree_aut_union_disj.cc  bdd_bu_tree_aut_unreach.cc  bdd_bu_tree_aut_useless.cc  bdd_bu_tt_wrapper.hh  bdd_td_tree_aut.cc  bdd_td_tree_aut_core.cc  bdd_td_tree_aut_core.hh  bdd_td_tree_aut_downsim.cc  bdd_td_tree_aut_incl.cc  bdd_td_tree_aut_isect.cc  bdd_td_tree_aut_sim.cc  bdd_td_tree_aut_union.cc  bdd_td_tree_aut_union_disj.cc  bdd_td_tree_aut_unreach.cc  bdd_td_tree_aut_useless.cc  bdd_tree_aut.cc  bdd_tree_aut_incl.cc  bdd_tree_aut_isect.cc  bdd_tree_aut_op.cc  bdd_tree_aut_union.cc  bdd_tree_aut_unreach.cc  bdd_tree_aut_useless.cc  comparators.hh  convert.cc  down_tree_incl_fctor.hh  down_tree_opt_incl_fctor.hh  (+67 more)
src/mtbdd/: apply1func.hh  apply2func.hh  apply3func.hh  classify_case.hh  mtbdd_node.hh  ondriks_mtbdd.hh  set_union_apply2func.hh  void_apply1func.hh  void_apply2func.hh
src/util/: bdd_td_trans_table.hh  cache.hh  cached_binary_op.hh  expl_bu_index.hh  graph.hh  shared_counter.hh  splitting_relation.hh
tests/: CMakeLists.txt  aut_timbuk_smaller_incl.txt  aut_timbuk_smaller_incl_td.txt  eval_incl_results.awk  incl_test.sh  incl_wrapper.sh  isect_test.sh  isect_wrapper.sh  sfta_wrapper.sh  sim_tester.py  timbuk_wrapper.sh  union_test.sh  union_wrapper.sh  vata-tester.sh.in
tests/aut_timbuk/: A0060  A0088  A0089  A0246  A0312  A0348  A0369  A0483  A1306  A1404  A28  A312  A315  A320  A323  A334  A339  A348  A355  A369  A390  A400  A488  A493  A494  A498  A6  A646  A667  A673  A678  A689  A693  A694  A695  A700  A701  A703
tests/fa_timbuk_armc/: armcNFA_inclTest_0  armcNFA_inclTest_1  armcNFA_inclTest_10  armcNFA_inclTest_1072  armcNFA_inclTest_1073  armcNFA_inclTest_14  armcNFA_inclTest_15  armcNFA_inclTest_16  armcNFA_inclTest_2  armcNFA_inclTest_20  armcNFA_inclTest_21  armcNFA_inclTest_22  armcNFA_inclTest_24  armcNFA_inclTest_26  armcNFA_inclTest_31  armcNFA_inclTest_33  armcNFA_inclTest_35  armcNFA_inclTest_4  armcNFA_inclTest_5  armcNFA_inclTest_550  armcNFA_inclTest_557  armcNFA_inclTest_8  armcNFA_inclTest_9
tests/random_difficult_cases/: NFA-4000-2-1-01.1  NFA-4000-2-1-01.2  NFA-4000-2-1-02.1  NFA-4000-2-1-02.2  NFA-4000-2-1-03.1  NFA-4000-2-1-03.2  NFA-4000-2-1-04.1  NFA-4000-2-1-04.2  NFA-4000-2-1-05.1  NFA-4000-2-1-05.2  NFA-4000-2-1-08.1  NFA-4000-2-1-08.2  NFA-4000-2-1-09.1  NFA-4000-2-1-09.2  NFA-4000-2-1-10.1  NFA-4000-2-1-10.2  NFA-4000-2-1.25-02.1  (+37 more)
unit_tests/: CMakeLists.txt  aut_db.hh  bdd_bu_tree_aut_test.cc  bdd_td_tree_aut_test.cc  bdd_tree_aut_test.cc  explicit_tree_aut_test.cc  formula_parser.cc  formula_parser.hh  log_fixture.cc  log_fixture.hh  ondriks_mtbdd_c_test.cc  timbuk_parser_test.cc  tree_aut_test.hh
(+14524 files in other folders)
